--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "sizes": "192x192"
     },
     {
-      "src": "/images/favicon.png",
+      "src": "/images/favicon_transparent.png",
       "type": "image/png",
       "sizes": "512x512"
     }
